new style for main.html

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,28 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<section class="intro">  
+  <div class="content">
+    <h1>Offr gives you insight in developers qualities.</h1>
+    <p>Look up a developer through awesome skill visualizations.</p>
+    <ul class="center nav nav-pills nav-justified">
+      <li><a class="btn btn-medium btn-green btn-radiusn" ng-href="#">Browse</a></li>
+      <li><a class="btn btn-medium btn-green btn-radius" ng-href="#">Join</a></li>
+    </ul>
+ </div>
+</section>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<section>  
+  <div class="content">
+    <h1>Resize your browser and see how they adapt.</h1>
+ </div>
+</section>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+<section>  
+  <div class="content">
+    <h1>It's amazing and fast.</h1>
+ </div>
+</section>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<section>  
+  <div class="content">
+    <h1>See the <a href="http://caniuse.com/#feat=viewport-units">browser support.</a></h1>
+ </div>
+</section>
