--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,79 +1,186 @@
-/* Space out content a bit */
+* {
+  box-sizing: border-box; 
+}
+
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin: 0; 
+  font-weight: 500;
+  font-family: 'HelveticaNeue';
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+section {
+  width: 100%;
+  padding: 0 7%;
+  display: table;
+  margin: 0;
+  max-width: none;
+  background-color: #373B44;
+  height: 100vh;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+section:nth-of-type(2n-1) {
+  background-color: #2ecc71;
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.intro {
+  height: 90vh;
+  background: url("../images/intro_background.JPG") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
+.content {
+  display: table-cell;
+  vertical-align: middle;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
+.center {
+  width:300px;
+  margin:100px auto;
+}
+
+h1 {
+  font-size: 3em;
+  display: block;
+  color: white;
+  font-weight: 300;
+}
+
+p {
+  font-size: 1.5em;
+  font-weight: 500;
+  color: #C3CAD9;
+}
+
+a {
+  font-weight: 700;
+  color: #373B44;
+  position: relative;
+  text-decoration: none !important;
+}
+
+a:hover { 
+  opacity: 0.8;
+}
+
+a:active {
+  top: 1px;
+}
+
+section:nth-of-type(2n) a {
+  color: #2ecc71;
+}
+
+footer {
+  padding: 1% 5%;
+  text-align:center;
+  background-color: #2ecc71;
+  color: white;
+}
+
+footer a {
+  color: #373B44;
+  font-weight: 500;
+  text-decoration: none !important;
+}
+
+/*Ghost Buttons*/
+
+input::-moz-focus-inner,
+button::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+input[type="submit"].btn,
+button.btn {
+  cursor: pointer;
+}
+
+a.btn,.btn {
+  margin-right: 1em; /* remove this while use*/
+  margin-bottom: 1em; /* remove this while use*/
+  display: inline-block;
+  outline: none;
+  *zoom: 1;
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+  text-decoration: none;
+  font-family: inherit;
+  font-weight: 300;
+  letter-spacing: 1px;
+  vertical-align: middle;
+  border: 1px solid;
+  transition: all 0.2s ease;
+  box-sizing: border-box;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.01);
 }
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+/* Radius */
+.btn-radius {
+  border-radius: 3px;
+}
+/* Sizes */
+.btn-small {
+  font-size: 0.8125em;
+  padding: 0.4125em 1.25em;
+}
+.btn-medium {
+  font-size: 0.9375em;
+  padding: 0.5375em 1.375em;
+}
+.btn-large {
+  font-size: 1.0625em;
+  padding: 0.5625em 1.5em;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
+/* Colors */
+.btn-green {
+  color: #2ecc71;
+  border-color: #2ecc71;
 }
-.marketing p + h4 {
-  margin-top: 28px;
+.btn-green:hover {
+  background: #2ecc71 !important;
+  color: #fff;
+  border-color: #2ecc71;    
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.btn-blue {
+  color: #4682B4;
+  border-color: #4682B4;
+}
+.btn-blue:hover {
+  background: #4682B4;
+  color: #fff;
+  border-color: #4682B4;    
+}
+
+.btn-orange {
+  color: #FF8C00;
+  border-color: #FF8C00;
+}
+.btn-orange:hover {
+  background: #FF8C00;
+  color: #fff;
+  border-color: #FF8C00;    
+}
+
+.btn-red {
+  color: #B22222;
+  border-color: #B22222;
+}
+.btn-red:hover {
+  background: #B22222;
+  color: #fff;
+  border-color: #B22222;  
+}
+
+.btn-gray {
+  color: #808080;
+  border-color: #808080;
+}
+.btn-gray:hover {
+  background: #808080;
+  color: #fff;
+  border-color: #808080;  
 }
