--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,18 +11,18 @@
 
 <section>  
   <div class="content">
-    <h1>Resize your browser and see how they adapt.</h1>
+    <h1>About ...</h1>
  </div>
 </section>
 
 <section>  
   <div class="content">
-    <h1>It's amazing and fast.</h1>
+    <h1>Features ...</h1>
  </div>
 </section>
 
 <section>  
   <div class="content">
-    <h1>See the <a href="http://caniuse.com/#feat=viewport-units">browser support.</a></h1>
+    <h1>Team <a href="#">lorem ipsum</a></h1>
  </div>
 </section>
