--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,8 +3,8 @@
     <h1>Offr gives you insight in developers qualities.</h1>
     <p>Look up a developer through awesome skill visualizations.</p>
     <ul class="center nav nav-pills nav-justified">
-      <li><a class="btn btn-medium btn-green btn-radiusn" ng-href="#">Browse</a></li>
-      <li><a class="btn btn-medium btn-green btn-radius" ng-href="#">Join</a></li>
+      <li><a class="btn btn-medium btn-green btn-radiusn" ng-href="#/explore">Explore</a></li>
+      <li><a class="btn btn-medium btn-green btn-radius" ng-href="#">Join Us</a></li>
     </ul>
  </div>
 </section>
