--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,5 +1,15 @@
+<div class="header-content">
+	<div class="header">
+		<img src="../images/placeholder_user.jpg" alt="User Profile Picture" class="img-circle img-responsive profile-picture-small">
+		<img src="../images/placeholder_user.jpg" alt="User Profile Picture" class="img-circle img-responsive profile-picture-small">
+		<img src="../images/placeholder_user.jpg" alt="User Profile Picture" class="img-circle img-responsive profile-picture-small">
+	</div>
+</div>
+
 <section>  
   <div class="content">
-    <h1>User list ...</h1>
+    <img src="../images/placeholder_user.jpg" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
+    <h1>Juri Jaris</h1>
+	<p>aefqefwfew</p>
  </div>
 </section>
