--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -4,16 +4,27 @@
 	</div>
 </div>
 
-<section>  
-  <div class="content">
-	<div class="row">
-	  <div class="col-md-2">
-	    <img ng-src="{{selectedUser.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
-	  </div>
-	  <div class="col-md-8">
-	    <h1>{{selectedUser.name}}</h1>
-		<p>{{selectedUser.description}}</p>
-	  </div>
+<section class="inverted">  
+	<div class="container">
+
+		<div class="row">
+		  <div class="col-md-2">
+		    <img ng-src="{{selectedUser.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
+		  </div>
+		  <div class="col-md-10">
+		    <h1>{{selectedUser.name}}</h1>
+				<p>{{selectedUser.description}}</p>
+		  </div>
+		</div>
+
+		<div class="row">
+		  <div class="col-md-6">
+		    <p>{{selectedUser.description}}</p>
+		  </div>
+		  <div class="col-md-6">
+		    <div simple-line-chart></div>
+		  </div>
+		</div>
+
 	</div>
- </div>
 </section>
