--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<section class="intro">  
+<section class="default intro">  
   <div class="content">
     <h1>Offr gives you insight in developers qualities.</h1>
     <p>Look up a developer through awesome skill visualizations.</p>
@@ -9,20 +9,22 @@
  </div>
 </section>
 
-<section>  
+<section class="default">  
   <div class="content">
-    <h1>About ...</h1>
+    <h1>About Offr</h1>
+    <p>Offr visualizes developers expertise and soft skills. Compare as fast as possible different developers for your use cases.</p>
  </div>
 </section>
 
-<section>  
+<section class="default">  
   <div class="content">
-    <h1>Features ...</h1>
+    <h1>Features</h1>
  </div>
 </section>
 
-<section>  
+<section class="default">  
   <div class="content">
-    <h1>Team <a href="#">lorem ipsum</a></h1>
+    <h1>Continous Enhancement</h1>
+    <p>Offr uses multiple third party tools to enhance the information about the developer. It helps to convince employers to believe in that daily used tools. Make use of <a href="#">Tracking GitHub Activity</a>, ...</p>
  </div>
 </section>
