adds stylized bar chart directive with data from user

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -22,7 +22,7 @@
 		    <p>{{selectedUser.description}}</p>
 		  </div>
 		  <div class="col-md-6">
-		    <div simple-line-chart></div>
+		    <div tag-bar-chart hardskill="hardskill"></div>
 		  </div>
 		</div>
 
