--- a/app/styles/maind3.css
+++ b/app/styles/maind3.css
@@ -14,6 +14,11 @@ text {
 	fill:#fff;
 }
 
+.label-big {
+  font-size: 150%;
+  font-weight: bold;
+}
+
 .label-mid {
   font-size: 130%;
   font-weight: bold;
