adds transition in tagbarchart for switching users

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -25,11 +25,26 @@
 			  </div>
 		  </div>
 		  <div class="col-md-6">
+		  	<!--<div class="tile">
+
+			  </div>-->
+		  </div>
+		</div>
+
+	<!--
+		<div class="row">
+		  <div class="col-md-6">
+		  	<div class="tile">
+			    <div tag-bar-chart hardskill="hardskill"></div>
+			  </div>
+		  </div>
+		  <div class="col-md-6">
 		  	<div class="tile">
 			    <div tag-bar-chart hardskill="hardskill"></div>
 			  </div>
 		  </div>
 		</div>
+	-->
 
 	</div>
 </section>
