--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
 
 <section class="default">  
   <div class="content">
-    <h1>About Offr</h1>
+    <h1>About</h1>
     <p>Offr visualizes developers expertise and soft skills. Compare as fast as possible different developers for your use cases.</p>
  </div>
 </section>
@@ -24,7 +24,7 @@
 
 <section class="default">  
   <div class="content">
-    <h1>Continous Enhancement</h1>
+    <h1>Continous Improvements</h1>
     <p>Offr uses multiple third party tools to enhance the information about the developer. It helps to convince employers to believe in that daily used tools. Make use of <a href="#">Tracking GitHub Activity</a>, ...</p>
  </div>
 </section>
