--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -114,7 +114,8 @@ a:active {
 }
 
 .tile {
-  padding: 5px;
+  margin: 15px 0px;
+  padding: 10px;
   background: rgba(0,0,0,0.35);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
