--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -7,15 +7,16 @@
 <section class="inverted">  
 	<div class="container">
 
-	
-		<div class="row">
-			  <div class="col-md-2">
-			    <img ng-src="{{selectedUser.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
-			  </div>
-			  <div class="col-md-10">
-				    <h1>{{selectedUser.name}}</h1>
-						<p>{{selectedUser.description}}</p>
-			  </div>
+		<div class="tile">
+			<div class="row">
+				  <div class="col-md-2">
+				    <img ng-src="{{selectedUser.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
+				  </div>
+				  <div class="col-md-10">
+					    <h1>{{selectedUser.name}}</h1>
+							<p>{{selectedUser.description}}</p>
+				  </div>
+			</div>
 		</div>
 
 		<div class="row">
