--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,51 +1,64 @@
-<div class="users-list-content">
+<!--<div class="users-list-content">
 	<div class="users-list">
 		<img ng-repeat="user in users" ng-click="changeSelectedUser(user)" ng-src="{{user.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-small">
 	</div>
 </div>
+-->
 
-<section class="inverted">  
+<section class="default">  
 	<div class="container">
-
-		<div class="tile">
-			<div class="row">
-				  <div class="col-md-2">
-				    <img ng-src="{{selectedUser.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
-				  </div>
-				  <div class="col-md-10">
-					    <h1>{{selectedUser.name}}</h1>
-							<p>{{selectedUser.description}}</p>
-				  </div>
-			</div>
-		</div>
-
 		<div class="row">
-		  <div class="col-md-6">
-		  	<div class="tile">
-			    <div tag-bar-chart hardskill="hardskill"></div>
-			  </div>
-		  </div>
-		  <div class="col-md-6">
-		  	<!--<div class="tile">
 
-			  </div>-->
-		  </div>
-		</div>
+        <div class="col-md-2">
+          <div class="tile">
+		        <div class="form-group">
+		          <input type="text" class="form-control">
+		        </div>
+          	<ul>
+          		<li ng-repeat="user in users">
+          			<div class="profile-small">
+	      					<img ng-click="changeSelectedUser(user)" ng-src="{{user.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-small">
+	      					<p>{{user.name}}<p>
+      					</div>
+      				</li>
+      			</ul>
+          </div>
+    		</div>
 
-	<!--
-		<div class="row">
-		  <div class="col-md-6">
-		  	<div class="tile">
-			    <div tag-bar-chart hardskill="hardskill"></div>
-			  </div>
-		  </div>
-		  <div class="col-md-6">
-		  	<div class="tile">
-			    <div tag-bar-chart hardskill="hardskill"></div>
-			  </div>
-		  </div>
+				<div class="col-md-10">
+					<div class="tile">
+						<div class="row">
+						  <div class="col-md-2">
+						    <img ng-src="{{selectedUser.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
+						  </div>
+						  <div class="col-md-10">
+							    <h1>{{selectedUser.name}}</h1>
+									<p>{{selectedUser.description | limitTo : 200}}<span ng-show="selectedUser.description.length > 200"> ...</span> - <a href="">Details</a></p>
+						  </div>
+						</div>
+					</div>
+
+					<div class="row">
+					  <div class="col-md-7">
+					  	<div class="tile">
+						    <div tag-bar-chart hardskill="hardskill"></div>
+						  </div>
+					  </div>
+					  <div class="col-md-4">
+					  	<!--<div class="tile">
+
+						  </div>-->
+					  </div>
+					</div>
+				</div>
+
 		</div>
-	-->
+	</div>
+</section>
+
+<section class="default">  
+	<div class="container">
 
 	</div>
 </section>
+
