--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,32 @@
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Features</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 <section class="default intro">  
   <div class="content">
     <h1>Offr gives you insight in developers qualities.</h1>
     <p>Look up a developer through awesome skill visualizations.</p>
     <ul class="center nav nav-pills nav-justified">
-      <li><a class="btn btn-medium btn-green btn-radiusn" ng-href="#/explore">Explore</a></li>
+      <li><a class="btn btn-medium btn-green btn-radius" ng-href="#/explore">Explore</a></li>
       <li><a class="btn btn-medium btn-green btn-radius" ng-href="#">Join Us</a></li>
     </ul>
  </div>
