--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -12,10 +12,10 @@
         <div class="col-md-2">
           <div class="tile">
 		        <div class="form-group">
-		          <input type="text" class="form-control">
+		          <input type="text" class="form-control" ng-model="query">
 		        </div>
-          	<ul>
-          		<li ng-repeat="user in users">
+          	<ul class="search-content">
+          		<li ng-repeat="user in users | filter:{hardskill: query}">
           			<div class="profile-small">
 	      					<img ng-click="changeSelectedUser(user)" ng-src="{{user.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-small">
 	      					<p>{{user.name}}<p>
@@ -33,7 +33,7 @@
 						  </div>
 						  <div class="col-md-10">
 							    <h1>{{selectedUser.name}}</h1>
-									<p>{{selectedUser.description | limitTo : 200}} {{selectedUser.description.length > 200 ? '...' : ''}} - <a href="">Details</a></p>
+									<p>{{selectedUser.description | limitTo : 200}} {{selectedUser.description.length > 200 ? '...' : ''}} - <a href="">Details (make it collapsable</a></p>
 						  </div>
 						</div>
 					</div>
@@ -56,9 +56,9 @@
 	</div>
 </section>
 
-<section class="default">  
+<!--<section class="default">  
 	<div class="container">
 
 	</div>
-</section>
+</section>-->
 
