--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -65,11 +65,6 @@ ul {
   margin:100px auto;
 }
 
-.search-content {
-  height: 500px;
-  overflow-y: auto;
-}
-
 .profile-picture-big {
   width: 140px;
   height: auto;
@@ -143,6 +138,13 @@ footer a {
   color: #26A65B;
   font-weight: 500;
   text-decoration: none !important;
+}
+
+/* tiny scrollbar */
+.scroller {
+    height: 500px;
+    overflow-y: hidden;
+    position: relative;
 }
 
 /*Ghost Buttons*/
