adds images for user

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -29,7 +29,7 @@
     		</div>
 
 				<div class="col-md-10">
-					<div class="tile">
+					<div class="tile profile-container">
 						<div class="row">
 						  <div class="col-md-2">
 						    <img ng-src="{{selectedUser.imageUrl}}" alt="User Profile Picture" class="img-circle img-responsive profile-picture-big">
