--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -48,9 +48,9 @@
 						  </div>
 					  </div>
 					  <div class="col-md-5">
-					  	<div class="tile">
-					  		<div tag-bar-chart hardskill="hardskill"></div>>
-						  </div>
+					  	<!--<div class="tile">
+					  		<div tag-bar-chart hardskill="hardskill"></div>
+						  </div>-->
 					  </div>
 					</div>
 				</div>
