makes bar chart wider

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -42,12 +42,14 @@
 					</div>
 
 					<div class="row">
-					  <div class="col-md-7">
+					  <div class="col-md-8">
 					  	<div class="tile">
 					  		<div grouped-bar-chart selecteduser="selecteduser" hovered="hovered"></div>
 						  </div>
 					  </div>
-					  <div class="col-md-5">
+					  <div class="col-md-4">
+					  	<div class="tile" style="height:326px;">
+					  	</div>
 					  	<!--<div class="tile">
 					  		<div tag-bar-chart hardskill="hardskill"></div>
 						  </div>-->
