--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,6 +16,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
         <li><a href="#">Features</a></li>
+        <li><a href="#">Extension</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
