adds simple static pie chart directive

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -49,6 +49,7 @@
 					  </div>
 					  <div class="col-md-4">
 					  	<div class="tile" style="height:326px;">
+					  		<div pie-chart></div>
 					  	</div>
 					  	<!--<div class="tile">
 					  		<div tag-bar-chart hardskill="hardskill"></div>
