--- a/app/styles/maind3.css
+++ b/app/styles/maind3.css
@@ -1,7 +1,3 @@
-.bar {
-  fill: orange;
-}
-
 .x.axis path {
   display: none;
 }
@@ -30,5 +26,16 @@ text {
 
 .label-small {
   font-size: 115%;
+  font-weight: bold;
+}
+
+/* pieChart */
+
+.arc path {
+  stroke: #373B44;
+  stroke-width: 3px;
+}
+
+.pietext {
   font-weight: bold;
 }
