connects bar and pie charts hover effect

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -44,12 +44,12 @@
 					<div class="row">
 					  <div class="col-md-8">
 					  	<div class="tile">
-					  		<div grouped-bar-chart selecteduser="selecteduser" hovered="hovered"></div>
+					  		<div grouped-bar-chart selecteduser="selecteduser" compareuser="compareuser" hoveredfrom="hoveredfrom(args)" hovered="hovered"></div>
 						  </div>
 					  </div>
 					  <div class="col-md-4">
 					  	<div class="tile" style="height:326px;">
-					  		<div pie-chart></div>
+					  		<div pie-chart hardskill="hardskill" selecteduser="selecteduser" hoveredfrom="hoveredfrom(args)" hovered="hovered"></div>
 					  	</div>
 					  	<!--<div class="tile">
 					  		<div tag-bar-chart hardskill="hardskill"></div>
